# Finger-Scanner-ZKTeco-Wrapper

./: .dockerignore  .env  app.py  docker-compose.yml  dockerfile  main.py  output.xlsx  pyproject.toml  requirements.txt  ruff.toml  run_docker.bat  run_time_tests.py
adms_wrapper/: __main__.py
adms_wrapper/core/: data_processing.py  db_connector.py  db_queries.py  excel_logic.py
scripts/: _temp_earlyin_test.py  clear_db.py
templates/: bulk_employee_upload.html  dashboard.html  device_branch_mapping.html  employee_branch_mapping.html  employee_designation_mapping.html  employee_management.html  employee_name_mapping.html  settings.html  shift_templates.html  unified_management.html  user_shift_mapping.html
